--- a/.env.production
+++ b/.env.production
@@ -1,56 +1,38 @@
-# Production Environment Configuration
-NODE_ENV=production
+﻿NODE_ENV=production
 APP_NAME=Dragon Telegram Pro
-APP_VERSION=1.0.0
+APP_VERSION=6.0.0
 PORT=3000
 EXPO_PORT=8081
-
-# Database Configuration
-# For production, use PostgreSQL or MySQL
-# DATABASE_URL=postgresql://user:password@host:5432/database
-# DATABASE_URL=mysql://user:password@host:3306/database
-DATABASE_URL=file:./production.db
-
-# Redis Configuration (Required for BullMQ)
+DATABASE_URL=postgresql://username:password@localhost:5432/dragaan_pro
 REDIS_URL=redis://127.0.0.1:6379
-
-# Telegram API Credentials
-# Get these from https://my.telegram.org/apps
-TELEGRAM_API_ID=YOUR_API_ID_HERE
-TELEGRAM_API_HASH=YOUR_API_HASH_HERE
-
-# Security Keys (Generate strong random keys)
-JWT_SECRET=your_strong_jwt_secret_key_minimum_32_characters_long_here
-SESSION_SECRET=your_strong_session_secret_key_minimum_32_characters_long_here
-ENCRYPTION_KEY=your_32_character_encryption_key_here_exactly_32_chars
-
-# OAuth Configuration
-OAUTH_SERVER_URL=https://oauth.manus.im
-VITE_APP_ID=your_app_id_here
-OWNER_OPEN_ID=your_owner_id_here
-
-# CORS Configuration
-CORS_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
-
-# Features
-ENABLE_LICENSE_CHECK=true
-ANTI_BAN_ENABLED=true
-DEBUG=false
-
-# Rate Limiting
+JWT_SECRET=EuBUV_rK$S8gbz9AXvMtwH@4Q+W1lkaIY?eRojimTdCcN2J*pf-LPD#nGxh!6570
+SESSION_SECRET=DrKxmvMaIecY$S7JbT1s%O@E0V+lGiZjHPWQXL*2#w_?N!pUufdkn5yF=h4Ao38z
+ENCRYPTION_KEY=sVySHBzQY7tWFj8KeANnivJRxoklwXac
+TELEGRAM_API_ID=your_api_id_here
+TELEGRAM_API_HASH=your_api_hash_here
+OAUTH_SERVER_URL=https://your-oauth-server.com
+APP_ID=your_app_id
+CORS_ORIGINS=https://yourdomain.com
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
-
-# Proxy Configuration (Optional)
-# PROXY_HOST=your_proxy_host
-# PROXY_PORT=your_proxy_port
-# PROXY_USERNAME=your_proxy_username
-# PROXY_PASSWORD=your_proxy_password
-
-# Monitoring & Logging
+ANTI_BAN_ENABLED=true
+ANTI_BAN_STRICT_MODE=true
+ENABLE_METRICS=true
+ENABLE_HEALTH_CHECKS=true
+ENABLE_LICENSE_CHECK=true
+PROXY_ROTATION_ENABLED=true
+PROXY_CHECK_INTERVAL=300000
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+STORAGE_TYPE=local
+STORAGE_PATH=./uploads
+ENABLE_BULK_OPERATIONS=true
+ENABLE_ADVANCED_EXTRACTION=true
+ENABLE_REAL_TIME_UPDATES=true
+ENABLE_ANALYTICS=true
+HELMET_ENABLED=true
+ENABLE_CSRF_PROTECTION=true
 LOG_LEVEL=info
-ENABLE_MONITORING=true
-
-# Performance
-MAX_WORKERS=4
-QUEUE_CONCURRENCY=5
+LOG_FILE=./logs/app.log
