--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:metro": "cross-env EXPO_USE_METRO_WORKSPACE_ROOT=1 npx expo start --web --port ${EXPO_PORT:-8081}",
     "build": "esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "build:worker": "esbuild server/worker.ts --platform=node --packages=external --bundle --format=esm --outfile=dist/worker.js",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "start": "cross-env NODE_ENV=development tsx server/_core/index.ts",
     "start:worker": "cross-env NODE_ENV=production node dist/worker.js",
     "dev:worker": "cross-env NODE_ENV=development tsx watch server/worker.ts",
     "check": "tsc --noEmit",
@@ -39,6 +39,7 @@
     "@trpc/client": "11.7.2",
     "@trpc/react-query": "11.7.2",
     "@trpc/server": "11.7.2",
+    "@types/pg": "^8.16.0",
     "axios": "^1.13.2",
     "bullmq": "^5.24.0",
     "clsx": "^2.1.1",
