--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -44,4 +44,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD node -e "require('http').get('http://localhost:3000/health', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"
 
 # Start command
-CMD ["node", "dist/index.js"]
+CMD ["node", "dist/_core/index.js"]
