--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -12,7 +12,7 @@ COPY package.json pnpm-lock.yaml ./
 
 # Install dependencies
 FROM base AS dependencies
-RUN pnpm install --frozen-lockfile --prod=false
+RUN pnpm install --no-frozen-lockfile --prod=false
 
 # Build stage
 FROM base AS build
@@ -25,7 +25,7 @@ FROM base AS production
 
 # Install production dependencies only
 COPY package.json pnpm-lock.yaml ./
-RUN pnpm install --frozen-lockfile --prod
+RUN pnpm install --no-frozen-lockfile --prod
 
 # Copy built files
 COPY --from=build /app/dist ./dist
