--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "dev:metro": "cross-env EXPO_USE_METRO_WORKSPACE_ROOT=1 npx expo start --web --port ${EXPO_PORT:-8081}",
     "build": "esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "build:worker": "esbuild server/worker.ts --platform=node --packages=external --bundle --format=esm --outfile=dist/worker.js",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
+    "start": "drizzle-kit push && cross-env NODE_ENV=production node dist/index.js",
     "start:worker": "cross-env NODE_ENV=production node dist/worker.js",
     "start:free-tier": "concurrently -n \"API,WORKER\" -c \"cyan,magenta\" \"npm run start\" \"npm run start:worker\"",
     "dev:worker": "cross-env NODE_ENV=development tsx watch server/worker.ts",
@@ -94,7 +94,8 @@
     "tailwind-merge": "^2.6.0",
     "telegram": "^2.26.22",
     "webpack-obfuscator": "^3.6.0",
-    "zod": "^4.2.1"
+    "zod": "^4.2.1",
+    "drizzle-kit": "^0.31.9"
   },
   "devDependencies": {
     "@expo/ngrok": "^4.1.3",
@@ -107,7 +108,6 @@
     "@types/react": "~19.1.17",
     "better-sqlite3": "^12.6.2",
     "cross-env": "^7.0.3",
-    "drizzle-kit": "^0.31.9",
     "esbuild": "^0.25.12",
     "eslint": "^9.39.2",
     "eslint-config-expo": "~10.0.0",
