🔧 Phase 2 Critical Fixes - Admin password, tRPC type safety, security improvements

--- a/.env.example
+++ b/.env.example
@@ -32,6 +32,11 @@ NODE_ENV=development
 PORT=3000
 EXPO_PORT=8081
 
+# Admin Configuration
+ADMIN_EMAIL=admin@falcon.pro
+ADMIN_PASSWORD=your_secure_admin_password
+ADMIN_NAME=Falcon Admin
+
 # Logging
 LOG_LEVEL=info
 DEBUG=false
