--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "license:hardware": "tsx scripts/license-cli.ts hardware",
     "build:protected": "npm run build && webpack --config webpack.obfuscate.config.js",
     "start:protected": "cross-env NODE_ENV=production node dist-obfuscated/index.js",
-    "integrity:generate": "tsx -e \"import {IntegrityChecker} from './server/_core/integrity-checker'; IntegrityChecker.generateManifest('./integrity-manifest.json');\""
+    "integrity:generate": "tsx -e \"import {IntegrityChecker} from './server/_core/integrity-checker'; IntegrityChecker.generateManifest('./integrity-manifest.json');\"",
+    "build:dev": "eas build --platform android --profile development",
+    "build:prod": "eas build --platform android --profile production"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
